--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Roboto, Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header {
@@ -9,7 +9,7 @@ header {
     align-items: center;
     color: #f9faf8;
     background-color: #1f2937;
-    padding: 0 10px;
+    padding: 0 24px;
 }
 
 li {
@@ -22,4 +22,44 @@ li {
 a {
     color: #f9faf8;
     text-decoration: none;
+}
+
+.main-content {
+    display: flex;
+    flex-direction: row;
+    background-color: #1f2937;
+    color: #f9faf8;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-text {
+    font-size: 48px;
+    font-weight: 900;
+    padding: 24px;
+}
+
+p {
+    font-size: 18px;
+    color: #e5e7eb;
+    text-wrap: wrap;
+    display: block;
+    padding: 0 24px;
+}
+
+button {
+    display: block;
+    background-color: #3882f6;
+    color: #f9faf8;
+    margin: 15px 0;
+    border: none;
+    border-radius: 6px;
+    padding: 10px 40px;
+    font-size: 16px;
+}
+
+img {
+    width: 400px;
+    height: 400px;
+    padding-right: 24px;
 }
